[package]
name = "rua_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.59", features = ["span-locations"] }
syn = { version = "2.0.17", features = ["full"] }
quote = "1.0.28"
